# veldera

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO_BIG.md  TODO_VEHICLES.md  shell.nix
client/camera/: Cargo.toml
client/camera/src/: follow.rs  input.rs  lib.rs
client/camera_state/: Cargo.toml
client/camera_state/src/: lib.rs
client/input/: Cargo.toml
client/input/src/: lib.rs
client/player/: Cargo.toml
client/player/src/: controller.rs  effects.rs  lib.rs  trajectory.rs  yeet.rs
client/player/src/body/: arm.rs  bones.rs  head.rs  locomotion.rs  mod.rs  ragdoll.rs
client/roads/: Cargo.toml
client/roads/src/: lib.rs
client/teleport/: Cargo.toml
client/teleport/src/: lib.rs
client/ui/: Cargo.toml
client/ui/assets/: GoNoto.txt
client/ui/src/: camera.rs  clouds.rs  inspector.rs  lib.rs  location.rs  physics.rs  rendering.rs  shadow_diag.rs  streaming.rs  vehicle.rs
client/vehicle/: Cargo.toml
client/vehicle/src/: audio.rs  components.rs  core.rs  lib.rs  physics.rs  telemetry.rs  visuals.rs
client/veldera/: Cargo.toml
client/veldera-viewer/: Cargo.toml
client/veldera-viewer/assets/vehicles/: CREDITS.md  craft_racer.glb  craft_speederA.glb  ironclad.scn.ron  swiftshadow.scn.ron  thunderstrike.scn.ron
client/veldera-viewer/src/: assets.rs  async_runtime.rs  atmosphere.rs  camera.rs  coords.rs  fps_controller.rs  geo.rs  launch_params.rs  lib.rs  lod.rs  main.rs  mesh.rs  terrain_material.rs  terrain_material.wgsl  time_of_day.rs  ui.rs  unlit_material.rs  unlit_material.wgsl
client/veldera-viewer/src/camera/: flycam.rs  follow.rs  fps.rs  input.rs  mod.rs
client/veldera-viewer/src/physics/: grapple.rs  gravity.rs  mod.rs  projectile.rs  terrain.rs
client/veldera-viewer/src/rendering/: atmosphere.rs  mesh.rs  terrain_material.rs
client/veldera-viewer/src/ui/: camera.rs  diagnostics.rs  gameplay.rs  location.rs  mod.rs
client/veldera-viewer/src/vehicle/: components.rs  core.rs  mod.rs  physics.rs  telemetry.rs  tuning.rs
client/veldera-viewer/src/world/: geo.rs  lod.rs  mod.rs  time_of_day.rs
client/veldera/assets/: 135034__mrlindstrom__windloop6sec.txt  151713__bowlingballout__pvc-rocket-cannon.txt  519649__boaay__basket-ball-bounce.txt  engine
client/veldera/assets/config/: launch.toml
client/veldera/assets/vehicles/: craft_miner.glb  ironclad.scn.ron  swiftshadow.scn.ron  thunderstrike.scn.ron
client/veldera/src/: async_runtime.rs  constants.rs  input.rs  launch_params.rs  lib.rs  main.rs  profiler.rs
client/veldera/src/camera/: body.rs  flycam.rs  follow.rs  fps.rs  input.rs  mod.rs
client/veldera/src/config/: mod.rs  paths.rs
client/veldera/src/physics/: gravity.rs  mod.rs  projectile.rs  terrain.rs
client/veldera/src/player/: controller.rs  mod.rs  yeet.rs
client/veldera/src/rendering/: atmosphere.rs  clouds.rs  mesh.rs  mod.rs  terrain_material.rs
client/veldera/src/ui/: camera.rs  clouds.rs  diagnostics.rs  inspector.rs  location.rs  mod.rs  physics.rs  profiler.rs  shadow_diag.rs  streaming.rs  vehicle.rs
client/veldera/src/vehicle/: analyze_telemetry.py  components.rs  core.rs  mod.rs  physics.rs  tuning.rs
client/veldera/src/world/: coords.rs  geo.rs  lod.rs  mod.rs  moon.rs  time_of_day.rs
crates/async/: Cargo.toml
crates/atmosphere/: Cargo.toml
crates/atmosphere/src/: environment.rs  sun_transmittance.rs
crates/atmosphere/src/resources/: gpu_types.rs  textures.rs
crates/atmosphere/src/shaders/: bindings.wgsl  environment.wgsl  functions.wgsl  multiscattering_lut.wgsl  sky_view_lut.wgsl  types.wgsl
crates/bevy_pbr_atmosphere_planet/: Cargo.toml  NOTICE.md
crates/bevy_pbr_atmosphere_planet/src/: environment.rs  lib.rs  node.rs  resources.rs  sun_transmittance.rs
crates/bevy_pbr_atmosphere_planet/src/resources/: bind_groups.rs  mod.rs  pipelines.rs
crates/bevy_pbr_atmosphere_planet/src/shaders/: aerial_view_lut.wgsl  bindings.wgsl  bruneton_functions.wgsl  environment.wgsl  functions.wgsl  multiscattering_lut.wgsl  render_sky.wgsl  sky_view_lut.wgsl  transmittance_lut.wgsl  types.wgsl
crates/bevy_pbr_clouds_planet/: Cargo.toml
crates/bevy_pbr_clouds_planet/src/: constants.rs  inspect.rs  lib.rs  node.rs  noise.rs  resources.rs  settings.rs
crates/bevy_pbr_clouds_planet/src/resources/: bind_groups.rs  gpu_types.rs  layouts.rs  mod.rs  pipelines.rs  sampler.rs  uniforms.rs
crates/bevy_pbr_clouds_planet/src/shaders/: bindings.wgsl  climate.wgsl  climate_bake.wgsl  cloud_composite.wgsl  cloud_denoise.wgsl  cloud_god_rays.wgsl  cloud_raymarch.wgsl  cloud_shadow_apply.wgsl  cloud_shadow_bake.wgsl  cloud_temporal.wgsl  constants.wgsl  functions.wgsl  noise_bake.wgsl  poisson_jacobi.wgsl  sim_step.wgsl  types.wgsl
crates/camera/: Cargo.toml
crates/camera/src/: flycam.rs  lib.rs
crates/clouds/: Cargo.toml
crates/clouds/src/: embedded.rs  lib.rs
crates/clouds/src/resources/: bind_groups.rs  layouts.rs  textures.rs
crates/clouds/src/shaders/: climate_bake.wgsl  cloud_raymarch.wgsl  cloud_temporal.wgsl  noise_downsample.wgsl
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/geo/: Cargo.toml
crates/geo/src/: lib.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs  terrain.rs
crates/sky/: Cargo.toml
crates/sky/src/: atmosphere.rs  clouds.rs  lib.rs  moon.rs  time_of_day.rs
crates/terrain/: Cargo.toml
crates/terrain/src/: lib.rs  loader.rs  lod.rs  mesh.rs  terrain_material.rs
engine/async/: Cargo.toml
engine/camera/: Cargo.toml
engine/camera/src/: flycam.rs  lib.rs
engine/engine/: Cargo.toml
engine/engine/src/: assets.rs  lib.rs
engine/geo/: Cargo.toml
engine/geo/src/: coords.rs
reference/: Cargo.toml
reference/assets/: engine
reference/src/: main.rs
rust/: Cargo.toml  README.md  shell.nix
rust/crates/rocktree/: Cargo.toml
rust/crates/rocktree-client/: Cargo.toml
rust/crates/rocktree-client/src/: camera.rs  floating_origin.rs  loader.rs  (+6 more)
rust/crates/rocktree-decode/: Cargo.toml
(+326 files in other folders)
