[workspace]
resolver = "2"
members = ["client/*", "rocktree/*"]
default-members = ["client/veldera-viewer"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/philpax/veldera"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev.package."*"]
opt-level = 2
