[workspace]
resolver = "2"
members = ["client/*", "crates/*", "rocktree/*"]
default-members = ["client/veldera-viewer"]

[workspace.package]
edition = "2024"
repository = "https://github.com/philpax/veldera"
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow common patterns
module_name_repetitions = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.dev.package."*"]
opt-level = 2
