[package]
name = "veldera_game_camera"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Camera mode state machine for the Veldera client: switches between the engine freelook camera, the first-person controller, and a follow rig"

[dependencies]
avian3d = "0.6"
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_render",
    "bevy_window",
] }
bevy_egui = "0.39"
glam = "0.30"
leafwing-input-manager = "0.20"
tracing = "0.1"
veldera_camera = { path = "../../crates/camera" }
veldera_constants = { path = "../../crates/constants" }
veldera_geo = { path = "../../crates/geo" }
veldera_game_camera_state = { path = "../camera_state" }
veldera_game_input = { path = "../input" }
veldera_game_player = { path = "../player" }
veldera_game_teleport = { path = "../teleport" }

[lints]
workspace = true
