[package]
name = "veldera_game_camera"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Camera mode state machine for the Veldera client: switches between the engine freelook camera, the first-person controller, and a follow rig"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true, features = [
    "bevy_render",
    "bevy_window",
] }
bevy_egui = { workspace = true }
glam = { workspace = true }
leafwing-input-manager = { workspace = true }
tracing = { workspace = true }
veldera_camera = { workspace = true }
veldera_constants = { workspace = true }
veldera_geo = { workspace = true }
veldera_game_camera_state = { workspace = true }
veldera_game_input = { workspace = true }
veldera_game_player = { workspace = true }
veldera_game_teleport = { workspace = true }

[lints]
workspace = true
