[package]
name = "veldera_game_input"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Gameplay input bindings for the Veldera client: leafwing action maps, cursor-grab/egui focus management, and CameraAction-to-intent mapping"

[dependencies]
bevy = { workspace = true, features = ["bevy_window"] }
bevy_egui = { workspace = true }
leafwing-input-manager = { workspace = true }
veldera_input = { workspace = true }

[lints]
workspace = true
