[package]
name = "veldera_game_player"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "First-person player for the Veldera client: character controller, animated body avatar, ragdoll rig, and the charged-yeet launch mechanic"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true, features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "gltf_animation",
] }
glam = { workspace = true }
leafwing-input-manager = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
veldera_camera = { workspace = true }
veldera_config = { workspace = true }
veldera_constants = { workspace = true }
veldera_geo = { workspace = true }
veldera_physics = { workspace = true }
veldera_game_camera_state = { workspace = true }
veldera_game_input = { workspace = true }

[lints]
workspace = true
