[package]
name = "veldera_game_teleport"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Cinematic fly-to-location teleport for the Veldera client: animates the camera to a searched place and respawns the player on arrival"

[dependencies]
async-channel = { workspace = true }
avian3d = { workspace = true }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_audio",
] }
glam = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
veldera_async = { workspace = true }
veldera_camera = { workspace = true }
veldera_config = { workspace = true }
veldera_constants = { workspace = true }
veldera_geo = { workspace = true }
veldera_places = { workspace = true }
veldera_game_camera_state = { workspace = true }
veldera_game_player = { workspace = true }

[lints]
workspace = true
