[package]
name = "veldera_game_ui"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Debug UI for the Veldera client: the egui dock shell and per-subsystem diagnostic/tuning panels"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_window",
] }
bevy_egui = { workspace = true }
egui_dock = { workspace = true }
egui_extras = { workspace = true, features = ["datepicker"] }
egui_plot = { workspace = true }
chrono = { workspace = true }
glam = { workspace = true }
leafwing-input-manager = { workspace = true }
veldera_async = { workspace = true }
veldera_atmosphere = { workspace = true, features = ["serde"] }
veldera_clouds = { workspace = true, features = ["serde"] }
veldera_constants = { workspace = true }
veldera_engine = { workspace = true }
veldera_geo = { workspace = true }
veldera_physics = { workspace = true }
veldera_places = { workspace = true }
veldera_sky = { workspace = true }
veldera_terrain = { workspace = true }
veldera_game_camera = { workspace = true }
veldera_game_camera_state = { workspace = true }
veldera_game_input = { workspace = true }
veldera_game_player = { workspace = true }
veldera_game_teleport = { workspace = true }
veldera_game_vehicle = { workspace = true }

[lints]
workspace = true
