[package]
name = "veldera_game_vehicle"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Car vehicle system for the Veldera client: raycast suspension, a torque-curve drivetrain with an automatic transmission, scene-defined vehicles, and follow-camera entry/exit"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
] }
glam = { workspace = true }
leafwing-input-manager = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
veldera_config = { workspace = true }
veldera_geo = { workspace = true }
veldera_physics = { workspace = true }
veldera_game_camera = { workspace = true }
veldera_game_camera_state = { workspace = true }
veldera_game_input = { workspace = true }
veldera_game_player = { workspace = true }

[lints]
workspace = true
