[package]
name = "veldera"
version = "0.1.0"
edition.workspace = true
description = "3D viewer for Google Earth mesh data using Bevy"
repository.workspace = true
license.workspace = true

[dependencies]
# Platform-agnostic async channel (replaces tokio::sync::mpsc).
async-channel = "2"
# Physics engine.
avian3d = "0.6"
# Base Bevy features that work on both native and WASM.
bevy = { version = "0.18.0", default-features = false, features = [
  "bevy_animation",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_gizmos_render",
  "bevy_gltf",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_post_process",
  "bevy_render",
  "bevy_window",
  "bevy_winit",
  "gltf_animation",
  "jpeg",
  "mp3",
  "png",
  "reflect_auto_register",
  "tonemapping_luts",
  "wav",
  "webgl2"
] }
bevy_egui = "0.39"
veldera_atmosphere = { path = "../../crates/atmosphere", features = [
  "serde",
] }
veldera_clouds = { path = "../../crates/clouds", features = [
  "serde",
] }
egui_dock = "0.18"
egui_extras = { version = "0.33.3", features = ["datepicker"] }
# Pulled in transitively via egui_extras's datepicker feature; declared
# directly so we can convert between `SimpleDate` and `NaiveDate` in the
# location UI.
chrono = { version = "0.4", default-features = false }
egui_plot = "0.34.0"
glam = "0.30"
leafwing-input-manager = "0.20"
# Random number generation.
rand = "0.9"
rocktree-decode = { path = "../../rocktree/rocktree-decode" }
veldera_config = { path = "../../crates/config" }
veldera_constants = { path = "../../crates/constants" }
veldera_async = { path = "../../crates/async" }
veldera_camera = { path = "../../crates/camera" }
veldera_engine = { path = "../../crates/engine" }
veldera_game_camera_state = { path = "../camera_state" }
veldera_game_input = { path = "../input" }
veldera_game_player = { path = "../player" }
veldera_game_teleport = { path = "../teleport" }
veldera_geo = { path = "../../crates/geo" }
veldera_physics = { path = "../../crates/physics" }
veldera_places = { path = "../../extras/places" }
veldera_sky = { path = "../../crates/sky" }
veldera_terrain = { path = "../../crates/terrain" }
# For geocoding API responses and character metric extras parsing.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# Cross-platform time support.
web-time = "1"
# Serde-backed asset loaders; we use the TOML one for hot-reloadable configs.
bevy_common_assets = { version = "0.15", features = ["toml"] }

# Native: Additional Bevy features and Tokio runtime.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
  "bevy_animation",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_gizmos_render",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_post_process",
  "bevy_render",
  "bevy_window",
  "bevy_winit",
  # Watches `assets/` and emits `AssetEvent::Modified` so config TOML edits
  # hot-reload while the game runs. Native only; browsers can't watch the FS.
  "file_watcher",
  "gltf_animation",
  "jpeg",
  "multi_threaded",
  "tonemapping_luts",
  # Enables `tracing` spans on every Bevy system; the in-game CPU
  # profiler subscribes to these via `LogPlugin::custom_layer`.
  # Native-only since `tracing-subscriber` is already native-only.
  "trace",
  "x11"
] }
clap = { version = "4", features = ["derive"] }

# WASM: Panic hook and tracing for browser console.
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"

[features]
default = ["webgpu"]
webgpu = ["bevy/webgpu"]

[lints]
workspace = true
