[package]
name = "veldera"
version = "0.1.0"
edition.workspace = true
description = "3D viewer for Google Earth mesh data using Bevy"
repository.workspace = true
license.workspace = true

[dependencies]
# Platform-agnostic async channel (replaces tokio::sync::mpsc).
async-channel = { workspace = true }
# Physics engine.
avian3d = { workspace = true }
# Base Bevy features that work on both native and WASM.
bevy = { workspace = true, features = [
  "bevy_animation",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_gizmos_render",
  "bevy_gltf",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_post_process",
  "bevy_render",
  "bevy_window",
  "bevy_winit",
  "gltf_animation",
  "jpeg",
  "mp3",
  "png",
  "reflect_auto_register",
  "tonemapping_luts",
  "wav",
  "webgl2"
] }
bevy_egui = { workspace = true }
veldera_atmosphere = { workspace = true, features = [
  "serde",
] }
veldera_clouds = { workspace = true, features = [
  "serde",
] }
egui_dock = { workspace = true }
egui_extras = { workspace = true, features = ["datepicker"] }
# Pulled in transitively via egui_extras's datepicker feature; declared
# directly so we can convert between `SimpleDate` and `NaiveDate` in the
# location UI.
chrono = { workspace = true }
egui_plot = { workspace = true }
glam = { workspace = true }
leafwing-input-manager = { workspace = true }
# Random number generation.
rand = { workspace = true }
rocktree-decode = { workspace = true }
veldera_config = { workspace = true }
veldera_constants = { workspace = true }
veldera_async = { workspace = true }
veldera_camera = { workspace = true }
veldera_engine = { workspace = true }
veldera_game_camera = { workspace = true }
veldera_game_camera_state = { workspace = true }
veldera_game_input = { workspace = true }
veldera_game_player = { workspace = true }
veldera_game_teleport = { workspace = true }
veldera_game_vehicle = { workspace = true }
veldera_game_ui = { workspace = true }
veldera_geo = { workspace = true }
veldera_physics = { workspace = true }
veldera_places = { workspace = true }
veldera_sky = { workspace = true }
veldera_terrain = { workspace = true }
# For geocoding API responses and character metric extras parsing.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
# Cross-platform time support.
web-time = { workspace = true }
# Serde-backed asset loaders; we use the TOML one for hot-reloadable configs.
bevy_common_assets = { workspace = true, features = ["toml"] }

# Native: Additional Bevy features and Tokio runtime.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy = { workspace = true, features = [
  "bevy_animation",
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_gizmos_render",
  "bevy_mesh",
  "bevy_pbr",
  "bevy_post_process",
  "bevy_render",
  "bevy_window",
  "bevy_winit",
  # Watches `assets/` and emits `AssetEvent::Modified` so config TOML edits
  # hot-reload while the game runs. Native only; browsers can't watch the FS.
  "file_watcher",
  "gltf_animation",
  "jpeg",
  "multi_threaded",
  "tonemapping_luts",
  # Enables `tracing` spans on every Bevy system; the in-game CPU
  # profiler subscribes to these via `LogPlugin::custom_layer`.
  # Native-only since `tracing-subscriber` is already native-only.
  "trace",
  "x11"
] }
clap = { workspace = true, features = ["derive"] }

# WASM: Panic hook and tracing for browser console.
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
default = ["webgpu"]
webgpu = ["bevy/webgpu"]

[lints]
workspace = true
