[package]
name = "veldera_atmosphere"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Bevy atmospheric scattering adapted for spherical planets with floating origin cameras"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
] }
glam = "0.30"
serde = { version = "1", features = ["derive"], optional = true }
tracing = "0.1"
veldera_constants = { path = "../constants" }

[features]
# Derive serde on the public atmosphere settings types so they can be loaded
# from config files. Pulls in glam's serde impls for the `UVec2`/`UVec3` LUT
# sizes.
serde = ["dep:serde", "glam/serde"]

[lints]
workspace = true
