[package]
name = "veldera_atmosphere"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
repository.workspace = true
description = "Bevy atmospheric scattering adapted for spherical planets with floating origin cameras"

[dependencies]
bevy = { workspace = true, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
] }
glam = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
tracing = { workspace = true }
veldera_constants = { workspace = true }

[features]
# Derive serde on the public atmosphere settings types so they can be loaded
# from config files. Pulls in glam's serde impls for the `UVec2`/`UVec3` LUT
# sizes.
serde = ["dep:serde", "glam/serde"]

[lints]
workspace = true
