[package]
name = "veldera_camera"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Floating-origin freelook flight camera for Veldera: WASD/mouse-look movement and a viewer request API (altitude, heading, translate)"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
] }
glam = "0.30"
serde = { version = "1", features = ["derive"] }
veldera_config = { path = "../config" }
veldera_constants = { path = "../constants" }
veldera_geo = { path = "../geo" }
veldera_input = { path = "../input" }

[lints]
workspace = true
